src/snapshots/ablet__atext__tests__append_text_and_split_at-2.snap
---
source: src/atext.rs
expression: l
---
Some(
    AText {
        text: "hello be",
        style_map: [
            None,
            None,
            None,
            None,
            None,
            None,
            Some(
                0,
            ),
            Some(
                0,
            ),
        ],
        styles: [
            ContentStyle {
                foreground_color: Some(
                    Green,
                ),
                background_color: None,
                underline_color: None,
                attributes: Attributes(
                    0,
                ),
            },
        ],
    },
)
