src/snapshots/ablet__atext__tests__append_text_and_split_at-3.snap
---
source: src/atext.rs
expression: r
---
Some(
    AText {
        text: "autiful World",
        style_map: [
            Some(
                0,
            ),
            Some(
                0,
            ),
            Some(
                0,
            ),
            Some(
                0,
            ),
            Some(
                0,
            ),
            Some(
                0,
            ),
            Some(
                0,
            ),
            None,
            Some(
                1,
            ),
            Some(
                1,
            ),
            Some(
                1,
            ),
            Some(
                1,
            ),
            Some(
                1,
            ),
        ],
        styles: [
            ContentStyle {
                foreground_color: Some(
                    Green,
                ),
                background_color: None,
                underline_color: None,
                attributes: Attributes(
                    0,
                ),
            },
            ContentStyle {
                foreground_color: Some(
                    Blue,
                ),
                background_color: None,
                underline_color: None,
                attributes: Attributes(
                    0,
                ),
            },
        ],
    },
)
