src/snapshots/ablet__atext__tests__conversion-2.snap
---
source: src/atext.rs
expression: "AText::from(\"foo\".to_string())"
---
AText {
    text: "foo",
    style_map: [
        None,
        None,
        None,
    ],
    styles: [],
}
