src/snapshots/ablet__atext__tests__conversion-3.snap
---
source: src/atext.rs
expression: "AText::from(\"foo\".green())"
---
AText {
    text: "foo",
    style_map: [
        Some(
            0,
        ),
        Some(
            0,
        ),
        Some(
            0,
        ),
    ],
    styles: [
        ContentStyle {
            foreground_color: Some(
                Green,
            ),
            background_color: None,
            underline_color: None,
            attributes: Attributes(
                0,
            ),
        },
    ],
}
