src/snapshots/ablet__atext__tests__conversion.snap
---
source: src/atext.rs
expression: "AText::from(\"foo\")"
---
AText {
    text: "foo",
    style_map: [
        None,
        None,
        None,
    ],
    styles: [],
}
