src/snapshots/ablet__atext__tests__conversion_and_test_append_text_and_split_at.snap
---
source: src/atext.rs
expression: foo
---
AText {
    text: "hello ",
    style_map: [
        None,
        None,
        None,
        None,
        None,
        None,
    ],
    styles: [],
}
