src/snapshots/ablet__atext__tests__replace_range-5.snap
---
source: src/atext.rs
expression: foo
---
AText {
    text: "Oh, Hello!",
    style_map: [
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
    ],
    styles: [],
}
