src/snapshots/ablet__atext__tests__replace_range.snap
---
source: src/atext.rs
expression: foo
---
AText {
    text: "Oh, Hello world",
    style_map: [
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        None,
        Some(
            0,
        ),
        Some(
            0,
        ),
        Some(
            0,
        ),
        Some(
            0,
        ),
        Some(
            0,
        ),
    ],
    styles: [
        ContentStyle {
            foreground_color: Some(
                Green,
            ),
            background_color: None,
            underline_color: None,
            attributes: Attributes(
                0,
            ),
        },
    ],
}
